# SistemaInventario

./: .gitmodules  ARQUITECTURA.md  BUILD_STATUS.md  CMakeLists.txt  COMPONENTS_SYSTEM.md  DATABASE_INFO.md  DIALOGS_REFACTORING.md  FIXES_COMPILATION.md  FIXES_SALESPAGE.md  INSTALL_QXLSX.md  MVVM_ARCHITECTURE.md  Main.qml  NOTIFICATIONS_ARCHITECTURE.md  PRINTING_SYSTEM.md  README.md  SALES_CART_SYSTEM.md  SALES_PRINT_FLOW.md  SOLUCION_FINAL_COMPILACION.md  UI_IMPROVEMENTS.md  main.cpp  rebuild_clean.ps1  vcpkg.json  verify_build.ps1
.qtcreator/: PROJECT_STRUCTURE.md
qml/components/: Badge.qml  CartItemDelegate.qml  ConfirmDialog.qml  ErrorDialog.qml  HelpTooltip.qml  LoadingSpinner.qml  NotificationBar.qml  OutlinedButton.qml  PrimaryButton.qml  QuantitySpinBox.qml  README.md  SearchField.qml  SecondaryButton.qml  StatCard.qml  StyledGroupBox.qml  SuccessDialog.qml  USAGE_GUIDE.md
qml/components/dialogs/: PrintDialog.qml  PrinterSettingsDialog.qml  SaleErrorDialog.qml  SaleSuccessDialog.qml
qml/pages/: CustomersPage.qml  DashboardPage.qml  ImportPage.qml  InventoryPage.qml  ProductsPage.qml  ReportsPage.qml  SalesPage.qml  SettingsPage.qml
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Customer.h  Product.h  Sale.h  StockMovement.h
src/repositories/: ProductRepository.cpp  ProductRepository.h  SaleRepository.cpp  SaleRepository.h
src/services/: ExcelImportService.cpp  ExcelImportService.h  PdfGeneratorService.cpp  PdfGeneratorService.h  PrintService.cpp  PrintService.h  ProductService.cpp  ProductService.h  SalesService.cpp  SalesService.h
src/utils/: BarcodeScannerHandler.cpp  BarcodeScannerHandler.h
src/viewmodels/: DashboardViewModel.cpp  DashboardViewModel.h  ExcelImportViewModel.cpp  ExcelImportViewModel.h  PrintViewModel.cpp  PrintViewModel.h  ProductListModel.cpp  ProductListModel.h  ReportsViewModel.cpp  ReportsViewModel.h  SalesCartViewModel.cpp  SalesCartViewModel.h
